# Head1stOpenCV

Halcon24.05/DefectDetect/: rectdefectdetect.hdev
OpenCV-Cpp-2.4.9/: install.pri
OpenCV-Cpp-2.4.9/CVATest/: CVATest.pro  cutoutobject.cpp  cva_global.h  humomentsmatcher.cpp  imageutils.cpp  main.cpp  readme.md
OpenCV-Cpp-2.4.9/CVAlgorithm/: CVAlgorithm.pro
OpenCV-Cpp-2.4.9/CVAlgorithm/src/: install.pri
OpenCV-Cpp-2.4.9/CVAlgorithm/src/app/: app.pri  app.pro  app_resource.rc  appd_resource.rc  application.cpp  application.h  appmainwindow.cpp  appmainwindow.h  centralwidget.cpp  centralwidget.h  compile.bat  compile.h  main.cpp
OpenCV-Cpp-2.4.9/CVAlgorithm/src/app/controls/: checkbox.h  controls.h  (+19 more)
OpenCV-Cpp-2.4.9/CVAlgorithm/src/cva/: areadifference.cpp  areadifference.h  bgr2hsvconverter.h  contourextractor.cpp  contourextractor.h  cornersplitter.cpp  cornersplitter.h  cutoutobject.cpp  cutoutobject.h  cva.cpp  cva.h  cva.pri  cva.pro  cva_global.h  cvamanager.cpp  cvamanager.h  defectdetector.cpp  defectdetector.h  humomentsmatcher.cpp  humomentsmatcher.h  imageutils.cpp  imageutils.h  minimumbounding.cpp  minimumbounding.h
OpenCV-Cpp-2.4.9/CVAlgorithm/src/psc/: psc.cpp  psc.h  psc.pri  psc.pro  psc_global.h
OpenCV-Cpp-2.4.9/CVAlgorithm/src/resources/: resources.cpp  resources.h  resources.pro  resources.qrc
OpenCV-Cpp-2.4.9/CutOutObject/: CutOutObject.pro  cutoutobject.cpp  cutoutobject.h  main.cpp  mainwindow.h
OpenCV-Cpp-2.4.9/DefectDetection/: DefectDetection.pro  bgr2hsvconverter.cpp  bgr2hsvconverter.h  compile.h  contourdefectdetector.cpp  contourdefectdetector.h  contourextractor.cpp  contourextractor.h  defectdetector.cpp  defectdetector.h  main.cpp  mainwindow.cpp  mainwindow.h  minimumbounding.cpp  minimumbounding.h
OpenCV-Cpp-2.4.9/HuMoments/: HuMoments.pro  compile.h  fileutils.cpp  fileutils.h  humomentsmatcher.cpp  humomentsmatcher.h  main.cpp  mainwindow.cpp  mainwindow.h
OpenCV-Cpp-2.4.9/PSC_OpenCV-2.4.9/: PSC_OpenCV-2.4.9.pro
OpenCV-Cpp-2.4.9/PSC_OpenCV-2.4.9/Counter_AutoTraining/: Counter_AutoTraining.pri  Counter_AutoTraining.pro  Counter_AutoTraining.sln  counter.pri  halconDLL.cpp  hp_detection_partstrainer_dynamic.h  main.cpp  transparent_part_global.h
OpenCV-Cpp-2.4.9/PSC_OpenCV-2.4.9/Counter_AutoTraining/config/: Sysparam_DL.xml
OpenCV-Cpp-2.4.9/PSC_OpenCV-2.4.9/Counter_AutoTraining/roi/: cline.h  croi.h
OpenCV-Cpp-2.4.9/PSC_OpenCV-2.4.9/computer vision/computer_vision/: computer_vision.pri  computer_vision.pro  partstrainer.cpp  qt_halcon.h
OpenCV-Cpp-2.4.9/PSC_OpenCV-2.4.9/computer_vision/: computer_vision.sln
OpenCV-Cpp-2.4.9/PSC_OpenCV-2.4.9/computer_vision/computer_vision/: cfg.cpp  cfg.h  computer_vision.pri  computer_vision.pro  computer_vision.vcxproj  computervisionhal.cpp  computervisionhal.h  halconDLL.cpp  hp_detection_partscounter.cpp  hp_detection_partscounter.h  hp_detection_partstrainer.cpp  hp_detection_partstrainer.h  main - 1Cam1Channel.cpp  main - 1Cam2Channel.cpp  main - 2Cam2Channel.cpp  main.cpp  partscounter.cpp  partscounter.h  partstrainer.cpp  partstrainer.h  qt_halcon.cpp  qt_halcon.h
OpenCV-Cpp-2.4.9/PSC_OpenCV-2.4.9/using_computer_vision/: using_computer_vision.pro
OpenCV-Cpp-2.4.9/share/: layoutbuilder.cpp  layoutbuilder.h  messageinstaller.cpp  messageinstaller.h
OpenCV-Cpp-4.12.0/BackgroundSubtraction/: CMakeLists.txt  backgroundsubtractor.cpp  backgroundsubtractor.h  main.cpp
OpenCV-Cpp-4.12.0/CutOutObject/: CMakeLists.txt  cutoutobject.cpp  cutoutobject.h  main.cpp
OpenCV-Cpp-4.12.0/DefectDetection/: CMakeLists.txt  bgr2hsvconverter.h  defectdetector.cpp  defectdetector.h  main.cpp  mainwindow.cpp  mainwindow.h  minimumbounding.cpp  minimumbounding.h  rectification.cpp  rectification.h
OpenCV-Cpp-4.12.0/GeoMatch/: CMakeLists.txt  GeoMatch.cpp  GeoMatchMain.cpp  main.cpp  mainwindow.cpp
OpenCV-Cpp-4.12.0/HuMoments/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
OpenCV-Cpp-4.12.0/ImageBinaryzation/: CMakeLists.txt  imagebinarizer.cpp  imagebinarizer.h  logo.rc
OpenCV-Cpp-4.12.0/ImageFiltering/: CMakeLists.txt  ImageFiltering.cpp  ImageFiltering.h  main.cpp
OpenCV-Cpp-4.12.0/PSC_OpenCV-2.4.9/: clean_temp_files.bat  install.pri
OpenCV-Cpp-4.12.0/PSC_OpenCV-2.4.9/Counter_AutoTraining/: counter.pri  counter.pro  hp_detection_partstrainer.cpp  hp_detection_partstrainer_dynamic.cpp  main - 1Cam2Channel2.cpp
OpenCV-Cpp-4.12.0/PSC_OpenCV-2.4.9/Counter_AutoTraining/config/: detection_infer_DL.hdev  generate_shape_model.hdvp
OpenCV-Cpp-4.12.0/PSC_OpenCV-2.4.9/Counter_AutoTraining/debug/: counter.lib
OpenCV-Cpp-4.12.0/PSC_OpenCV-2.4.9/Counter_AutoTraining/roi/: cimagewindow.h  crect.h  roi_global.h
OpenCV-Cpp-4.12.0/PSC_OpenCV-2.4.9/computer vision/: computer_vision.pro
OpenCV-Cpp-4.12.0/PSC_OpenCV-2.4.9/computer vision/computer_vision/: cfg.cpp  hp_detection_partstrainer.h
OpenCV-Cpp-4.12.0/PSC_OpenCV-4.12.0/: PSC_OpenCV-2.4.9.pro  install.pri
OpenCV-Cpp-4.12.0/PSC_OpenCV-4.12.0/Counter_AutoTraining/: Counter_AutoTraining.pro  cfg.cpp  computervisionhal.cpp  computervisionhal.h  counter.vcxproj  counter.vcxproj.filters  halconDLL.h  roi.lib
OpenCV-Cpp-4.12.0/PSC_OpenCV-4.12.0/Counter_AutoTraining/config/: search_shape_model_gray.hdvp
OpenCV-Cpp-4.12.0/PSC_OpenCV-4.12.0/Counter_AutoTraining/debug/: counter.lib
OpenCV-Cpp-4.12.0/PSC_OpenCV-4.12.0/Counter_AutoTraining/roi/: croilist.h
OpenCV-Cpp-4.12.0/PSC_OpenCV-4.12.0/computer_vision/: Sysparam.xml  computer_vision.pro
OpenCV-Cpp-4.12.0/PSC_OpenCV-4.12.0/using_computer_vision/: using_computer_vision.pri  using_computer_vision.pro
OpenCV-Cpp-4.12.0/TemplateMatching/: CMakeLists.txt  GeoMatch.h  main.cpp  mainwindow.cpp  mainwindow.h
OpenCV-Cpp-4.12.0/share/: layoutbuilder.h  messageinstaller.h
OpenCV-Python/: pyproject.toml
OpenCV-Python/12. track/: centroidtracker.py  main.py  main_track_pictures.py  main_track_video.py
doc/2026-01-10 100434 美华发来/: defectDetector_training.hdev  defectDetector_training_Multi-Match.hdev  generate_shape_model_dynamic.hdvp  search_shape_model_gray.hdvp
(+86 files in other folders)
